Added markers for flights