@@ -12,6 +12,8 @@ import com.google.android.gms.maps.GoogleMap;
 import com.google.android.gms.maps.model.BitmapDescriptor;
 import com.google.android.gms.maps.model.BitmapDescriptorFactory;
 import com.google.android.gms.maps.model.LatLng;
+import com.google.android.gms.maps.model.LatLngBounds;
+import com.google.android.gms.maps.model.Marker;
 import com.google.android.gms.maps.model.MarkerOptions;
 import com.google.android.gms.maps.model.PolylineOptions;
 
@@ -24,6 +26,7 @@ import java.util.Objects;
 
 import ar.edu.itba.dreamtrip.R;
 import ar.edu.itba.dreamtrip.TrackedDestinations.TrackedLegViewModel;
+import ar.edu.itba.dreamtrip.TrackedFlights.TrackedFlightCardView;
 import ar.edu.itba.dreamtrip.common.API.DataHolder;
 import ar.edu.itba.dreamtrip.common.API.dependencies.DealLoadType;
 import ar.edu.itba.dreamtrip.common.API.dependencies.Dependency;
@@ -33,7 +36,9 @@ import ar.edu.itba.dreamtrip.common.API.dependencies.TrackedLegsDependency;
 import ar.edu.itba.dreamtrip.common.model.Airport;
 import ar.edu.itba.dreamtrip.common.model.City;
 import ar.edu.itba.dreamtrip.common.model.Deal;
+import ar.edu.itba.dreamtrip.common.model.Flight;
 import ar.edu.itba.dreamtrip.common.model.FlightState;
+import ar.edu.itba.dreamtrip.common.model.FlightStatus;
 import ar.edu.itba.dreamtrip.common.tasks.AsyncTaskInformed;
 
 /**
@@ -98,8 +103,23 @@ public class PopulateMaps extends AsyncTaskInformed<Object,Void,ArrayList<Collec
         for(FlightState f: flights){
             Airport origin=data.getAirportById(f.getOrigin().getLocationID());
             Airport dest=data.getAirportById(f.getDestination().getLocationID());
-            PolylineOptions route = new PolylineOptions().add(latLng(origin.getLocation())).add(latLng(dest.getLocation()));
+            LatLng origLat=latLng(origin.getLocation());
+            LatLng destLat=latLng(dest.getLocation());
+
+            PolylineOptions route = new PolylineOptions().add(origLat).add(destLat);
+            route.color(TrackedFlightCardView.getColor(context,f.getStatus()));
             map.addPolyline(route);
+            MarkerOptions marker = new MarkerOptions();
+            double percentage=getPercentage(f.getStatus());
+            marker.position(getLatLngAtPercentage(origLat,destLat,percentage));
+            marker.position(origLat);
+            marker.anchor(0.5f,0.5f);
+            marker.icon(getMarkerIconFromDrawable(context.getDrawable(R.drawable.ic_airplane_l),1));
+            Marker mark=map.addMarker(marker);
+            LatLngBounds.Builder builder = new LatLngBounds.Builder();
+                            builder.include(origLat).include(destLat);
+                            LatLngBounds bounds = builder.build();
+            MarkerAnimation.animateMarkerToHC(mark, destLat, new LatLngInterpolator.LinearFixed());
         }
 
 
@@ -108,8 +128,8 @@ public class PopulateMaps extends AsyncTaskInformed<Object,Void,ArrayList<Collec
 
     public BitmapDescriptor getMarkerIconFromDrawable(Drawable drawable,double size) {
         Canvas canvas = new Canvas();
-        Integer width=(new Double(drawable.getIntrinsicWidth()*size)).intValue();
-        Integer height=(new Double(drawable.getIntrinsicHeight()*size)).intValue();
+        Integer width=(Double.valueOf(drawable.getIntrinsicWidth()*size)).intValue();
+        Integer height=(Double.valueOf(drawable.getIntrinsicHeight()*size)).intValue();
         Bitmap bitmap;
         bitmap = Bitmap.createBitmap(width, height, Bitmap.Config.ARGB_8888);
         canvas.setBitmap(bitmap);
@@ -120,5 +140,27 @@ public class PopulateMaps extends AsyncTaskInformed<Object,Void,ArrayList<Collec
 
     public LatLng latLng(Location loc){
         return new LatLng(loc.getLatitude(),loc.getLongitude());
+    }
+
+    public LatLng getLatLngAtPercentage(LatLng start,LatLng finish,double percentage){
+        double newX=(start.latitude + finish.latitude)*percentage;
+        double newY=(start.longitude + finish.longitude)*percentage;
+        return new LatLng(newX,newY);
+
+    }
+
+    private double getPercentage(FlightStatus status){
+        double percentage=0.05;
+        switch (status) {
+            case SCHEDULED:
+            case DELAYED:
+            case CANCELLED:
+                percentage=0.05;
+            case ACTIVE:
+                percentage=0.5;
+            case LANDED:
+                percentage=0.95;
+        }
+        return percentage;
     }
 }
